components/dropdown/src/styles/classic/style.scss
// Copyright (c) Alaska Air. All right reserved. Licensed under the Apache-2.0 license.
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

// layout styles - define any layout specifications for UI that is contained WITHIN the component
// never define layout that would cause effect on element outside the scope of this component

// Support for fallback values

/* stylelint-disable max-nesting-depth, selector-max-combinators, selector-max-compound-selectors, selector-max-attribute, no-descending-specificity */

@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
@use '@aurodesignsystem/webcorestylesheets/src/breakpoints';

:host([layout*='classic']) {
  position: relative;
  max-width: 100%;

  #bibSizer {
    position: absolute;
    z-index: -1;
    opacity: 0;
    pointer-events: none;
  }

  .label {
    font-size: var(--ds-text-body-size-xs, vac.$ds-text-body-size-xs);
    line-height: var(--ds-text-body-size-default, vac.$ds-text-body-size-default);
    transition: font-size .3s cubic-bezier(.215, .61, .355, 1);
    white-space: normal;

    &[hasTrigger='false'] {
      font-size: var(--ds-text-body-size-default, vac.$ds-text-body-size-default);
    }
  }

  .trigger {
    display: flex;
    flex-direction: row;
    box-shadow: inset 0 0 0 1px var(--ds-auro-dropdown-trigger-outline-color);
  }

  @media (hover: hover) {
    .trigger {
      &:hover {
        cursor: pointer;
      }
    }
  }

  .triggerContentWrapper {
    overflow: hidden;
    flex: 1;
    justify-content: start;
    padding-left: var(--ds-size-150, vac.$ds-size-150);
    text-overflow: ellipsis;
    white-space: nowrap;
  }


  /* stylelint-disable selector-id-pattern */
  #showStateIcon {
    display: flex;
    overflow: hidden;
    height: 100%;
    align-items: center;
    padding-right: var(--ds-size-150, vac.$ds-size-150);

    [auro-icon] {
      height: var(--ds-size-300, vac.$ds-size-300);
      line-height: var(--ds-size-300, vac.$ds-size-300);
    }

    &[data-expanded='true'] {
      [auro-icon] {
        transform: rotate(-180deg);
      }
    }
  }
  /* stylelint-enable selector-id-pattern */
}

:host([layout*='classic'][matchwidth]) {
  #bibSizer {
    width: 100%;
  }
}

:host([layout*='classic'][disabled]) {
  pointer-events: none;
}

